# ocoi

./: .gitignore  LICENSE  Makefile  README.md  create_tutorial_project.sh  dune-project  js_ocoi.opam  make_docs.sh  ocoi.opam  ocoi.opam.locked  ocoi.opam.template  ppx_ocoi.opam  ppx_ocoi.opam.locked  todos.sh
.github/workflows/: just_build.yml  test.yml
docs/: index.html
docs/_html/app/: index.html
docs/_html/ocoi/: concepts.html  projectstructure.html
docs/_html/ocoi/Ocoi/: index.html
docs/_html/ocoi/Ocoi__Db/: index.html
docs/_html/ocoi/Ocoi__Handler_utils/: index.html
docs/ocoi/: commandline.html  deploying.html  designphilosophy.html  glossary.html  index.html  knownissues.html  projectstructure.html  roadmap.html  tutorial.html
docs/ocoi/Api/: index.html
docs/ocoi/Api/Parameters/: index.html
docs/ocoi/Api/Responses/: index.html
docs/ocoi/Api/Specification/: index.html
docs/ocoi/Api__/: index.html
docs/ocoi/Api__/Parameters/: index.html
docs/ocoi/Api__/Responses/: index.html
docs/ocoi/Api__/Specification/: index.html
docs/ocoi/Api__Parameters/: index.html
docs/ocoi/Api__Parameters/None/: index.html
docs/ocoi/Api__Parameters/One_param/: index.html
docs/ocoi/Api__Parameters/module-type-Custom/: index.html
docs/ocoi/Api__Parameters/module-type-Json/: index.html
docs/ocoi/Api__Parameters/module-type-Jwt_json/: index.html
docs/ocoi/Api__Parameters/module-type-None/: index.html
docs/ocoi/Api__Parameters/module-type-One_param/: index.html
docs/ocoi/Api__Responses/: index.html
docs/ocoi/Api__Responses/Created/: index.html
docs/ocoi/Api__Responses/Empty_code/: index.html
docs/ocoi/Api__Responses/Empty_code_headers/: index.html
docs/ocoi/Api__Responses/Implementations/: index.html
docs/ocoi/Api__Responses/Json_code/: index.html
docs/ocoi/Api__Responses/Json_list/: index.html
docs/ocoi/Api__Responses/Json_opt/: index.html
docs/ocoi/Api__Responses/String/: index.html
docs/ocoi/Api__Responses/module-type-Empty_code/: index.html
docs/ocoi/Api__Responses/module-type-Empty_code_headers/: index.html
docs/ocoi/Api__Responses/module-type-Json/: index.html
docs/ocoi/Api__Responses/module-type-Json_code/: index.html
docs/ocoi/Api__Responses/module-type-Json_list/: index.html
docs/ocoi/Api__Responses/module-type-Json_opt/: index.html
docs/ocoi/Api__Specification/: index.html
docs/ocoi/Handlers/: index.html
docs/ocoi/Handlers/Make/: index.html
docs/ocoi/Handlers__/: index.html
docs/ocoi/Handlers__Auth/: index.html
docs/ocoi/Handlers__Jwt_utils/: index.html
docs/ocoi/Handlers__Parameters/: index.html
docs/ocoi/Handlers__Responses/: index.html
docs/ocoi/Ocoi/: index.html
docs/ocoi/Ocoi__/: index.html
docs/ocoi/Ocoi__App/: index.html
docs/ocoi/Ocoi__Auth/: index.html
docs/ocoi/Ocoi__Authentication/: index.html
docs/ocoi/Ocoi__Config/: index.html
docs/ocoi/Ocoi__Controllers/: index.html
docs/ocoi/Ocoi__Db/: index.html
docs/ocoi/Ocoi__Handler_utils/: index.html
docs/ocoi/Ocoi__Jwt_utils/: index.html
docs/ocoi/Ocoi__Logging/: index.html
docs/ocoi/Ocoi__Ocoi_middleware/: index.html
docs/ocoi/Ocoi__Persistence/: index.html
docs/ocoi/Ocoi__Test_modules/: index.html
docs/ocoi/Ocoi_api/: index.html
docs/ocoi/Ocoi_api__/: index.html
docs/ocoi/Ocoi_api__Parameters/: index.html
docs/ocoi/Ocoi_api__Responses/: index.html
docs/ocoi/Ocoi_api__Specification/: index.html
docs/ocoi/Ocoi_handlers/: index.html
docs/ocoi/Ocoi_handlers__/: index.html
docs/ocoi/Ocoi_handlers__Auth/: index.html
docs/ocoi/Ocoi_handlers__Jwt_utils/: index.html
docs/ocoi/Ocoi_handlers__Parameters/: index.html
docs/ocoi/Ocoi_handlers__Responses/: index.html
js_ocoi/: client.ml  decoder.ml  dune  ocoi.ml  parameters.ml  responses.ml  specification.ml  utils.ml
ocoi/: dune-project  handlers  ocoi.opam
ocoi/docs/: commandline.mld  concepts.mld  deploying.mld  designphilosophy.mld  dune  glossary.mld  index.mld  knownissues.mld  projectstructure.mld  roadmap.mld  tutorial.mld
ocoi/lib/: api.ml  app.ml  app.mli  auth.ml  auth.mli  authentication.mli  controllers.ml  controllers.mli  db.ml  db.mli  dune  endpoint_parameters.ml  endpoint_responses.ml  endpoints.ml  endpoints.mli  endpoints_examples.ml  ends.ml  handler_utils.ml  handler_utils.mli  handlers.ml  jwt_utils.ml  jwt_utils.mli  logging.ml  logging.mli  middleware.ml  models.ml  ocoi.ml  ocoi_middleware.ml  ocoi_middleware.mli  persistence.ml  persistence.mli  resolve.ml  resolve.mli  specification.ml  test_modules.ml
ocoi/lib/api/: api.ml  dune  ocoi_api.ml  parameters.ml  parameters.mli  responses.ml  responses.mli  specification.ml  specification.mli
ocoi/lib/handlers/: auth.ml  auth.mli  dune  error_responders.ml  handler_utils.ml  handlers.ml  jwt_utils.ml  jwt_utils.mli  ocoi_handlers.ml  parameters.ml  responses.ml  template_loaders.ml  utils.ml
ocoi/ppx/: dune  ppx_ocoi.ml
ocoi/share/: dune
ocoi/share/project_template/: Dockerfile  app.opam  app.opam.template  docker-compose.yml  dune-project  dune-project_
ocoi/share/project_template/api/: dune_
ocoi/share/project_template/app/: dune  dune_  handlers.ml  main.ml
ocoi/share/project_template/app/api/: dune  hello.ml
ocoi/share/project_template/app/controllers/: dune  dune_  hello.ml
ocoi/share/project_template/app/db/: db.ml  dune_
ocoi/share/project_template/app/models/: dune  dune_
ocoi/share/project_template/app/queries/: dune  dune_
ocoi/test/ppx/: dune  test.expected.ml  test.ml  test_compiles.ml
ppx/: ppx_ocoi.ml
todo/: Dockerfile  app.opam  dune-project
todo/app/: dune  main.ml  scrap
todo/app/controllers/: todo.ml
todo/app/db/: db.ml  dune
todo/app/db/migrate/: dune  todo.ml  todo_migrate.ml  todo_rollback.ml
todo/app/db/migrations/: todo.ml
todo/app/models/: todo_migration_queries.ml
todo/app/queries/: todo.ml
todoexample/app/: dune  main.ml
todoexample/app/controllers/: dune  todo.ml
todoexample/app/db/: connection.ml  db.ml  dune
todoexample/app/models/: dune  todo.ml  todo_migration_queries.ml  todo_queries.ml
(+920 files in other folders)
