opam-version: "2.0"
name: "ocoi"
version: "~dev"
synopsis: "Backend web framework in the style of Ruby on Rails"
maintainer: "Roddy MacSween <github@roddymacsween.co.uk>"
authors: "Roddy MacSween <github@roddymacsween.co.uk>"
license: "MIT"
homepage: "https://github.com/roddyyaga/ocoi"
bug-reports: "https://github.com/roddyyaga/ocoi/issues"
depends: [
  "dune"
  "core"
  "lwt"
  "lwt.unix"
  "opium"
  "ppx_deriving_yojson.runtime"
  "caqti"
  "caqti-lwt"
  "caqti-driver-postgresql"
  "lwt_ppx"
  "compiler-libs.common"
  "fileutils"
  "lwt_ppx"
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/roddyyaga/ocoi.git"
