(install
(files
(project_template/app.opam.template as project_template/app.opam.template)
(project_template/docker-compose.yml as project_template/docker-compose.yml)
(project_template/dune-project_ as project_template/dune-project)
(project_template/Dockerfile as project_template/Dockerfile)
(project_template/app/dune_ as project_template/app/dune)
(project_template/app/main.ml as project_template/app/main.ml)
(project_template/app/handlers.ml as project_template/app/handlers.ml)
(project_template/app/.ocamlformat as project_template/app/.ocamlformat)
(project_template/app/controllers/dune_ as project_template/app/controllers/dune)
(project_template/app/controllers/hello.ml as project_template/app/controllers/hello.ml)
(project_template/app/models/dune_ as project_template/app/models/dune)
(project_template/app/queries/dune_ as project_template/app/queries/dune)
(project_template/app/db/dune_ as project_template/app/db/dune)
(project_template/app/db/db.ml as project_template/app/db/db.ml)
(project_template/app/db/migrate/test as project_template/app/db/migrate/test)
(project_template/app/api/dune_ as project_template/app/api/dune)
(project_template/app/api/hello.ml as project_template/app/api/hello.ml)
)
(section share)
(package ocoi)
)
