(install
 (files
  (project_template/app.opam.template as project_template/app.opam.template)
  (project_template/docker-compose.yml as project_template/docker-compose.yml)
  (project_template/dune-project_ as project_template/dune-project)
  (project_template/Dockerfile as project_template/Dockerfile)
  (project_template/bin/dune_ as project_template/bin/dune)
  (project_template/bin/main.ml as project_template/bin/main.ml)
  (project_template/bin/handlers.ml as project_template/bin/handlers.ml)
  (project_template/.ocamlformat as project_template/.ocamlformat)
  (project_template/controllers/dune_ as project_template/controllers/dune)
  (project_template/controllers/hello.ml as
    project_template/controllers/hello.ml)
  (project_template/models/dune_ as project_template/models/dune)
  (project_template/queries/dune_ as project_template/queries/dune)
  (project_template/db/dune_ as project_template/db/dune)
  (project_template/db/db.ml as project_template/db/db.ml)
  (project_template/db/migrate/test as project_template/db/migrate/test)
  (project_template/api/dune_ as project_template/api/dune)
  (project_template/api/hello.ml as project_template/api/hello.ml))
 (section share)
 (package ocoi))
